Add Quick Buy customization, /rejoin command, and improve arena restoration
- Introduced per-player Quick Buy rows, enabling players to customize their shop layout.
- Added the /rejoin command to allow disconnected players to rejoin active games with proper handling for spectators and game states.
- Registered RejoinManager and RejoinListener to track and manage player disconnects.
- Tweaked arena restoration logic to restore full snapshots for consistency and reliability.
- Adjusted death and messaging systems for better user feedback.
- Refined existing mechanics, including upgrades, shop interactions, and game-over summaries.

Signed-off-by: Karter Sanamo <kartersanamo05@gmail.com>